--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 http://www.wowrdx.com</p><h2>License</h2>
 <p>GPL version 3</p>
 <h2>Authors</h2>
-<p>sigg (sigg@wowrdx.com)<br/><br/>      </p>
+<p>Sigg Rasgarroth EU<br/><br/>      </p>
 <h2>Contact</h2>
-<p>Sigg (sigg@wowrdx.com)<br/>      </p>
+<p>(team@wowrdx.com)<br/>      </p>
 
 
     <h2>Download</h2>
